TL-9663 theme_roots: Fix button alignment issue in My Goals.
Reviewed-on: https://review.totaralms.com/12522
Tested-by: Joby Harding <joby.harding@totaralearning.com>

--- a/theme/roots/less/totara/buttons.less
+++ b/theme/roots/less/totara/buttons.less
@@ -146,3 +146,8 @@ input[type="reset"] {
 .breadcrumb-button .singlebutton {
     margin: 0;
 }
+
+.buttons .singlebutton {
+    display: inline-block;
+    margin-right: @padding-small-horizontal;
+}
